# ascii_img

./: CMakeLists.txt  README.md  build.sh
example/: img_to_ascii.cpp  video_to_ascii.cpp
include/: ascii_img.h  debug.h
src/: ascii_img.cpp
test/: ascii_img_test.cpp
